fixed model layout bug for lg and md

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -727,7 +727,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
   .modal-content {
     top: 170px;
-    height: 480px;
+    height: 500px;
   }
   .modal-text-section {
     .modal-heading-underline {
